--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
-    <link rel="stylesheet" href="/css/styles.css"> <!-- if you have custom styles --></head>
-<body>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="/css/styles.css"></head>
 
+    <body>
     <nav>
         <ul class="navbar">
             <li><a href="/">Home</a></li>
